 * macosx/plugins/DFInput/English.lproj/NetPcsxHIDInputPluginMain.nib/
   classes.nib: Likewise.
 * macosx/plugins/DFInput/English.lproj/Credits.rtf: Likewise.
 * macosx/plugins/DFCdrom/macsrc/cdr-macosx.c: Add check for whether the
   disc is really a PSX CD or not.
 * macosx/Pcsx.xcodeproj/project.pbxproj: Added DFInput to project.
 * macosx/plugins/HIDInput: Removed.

July 25, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfcdrom/cdr.c: Wait for reading thread to complete for all
   operations.
 * plugins/dfcdrom/cdr.h: Don't define USE_NULL under Mac OS X.
 * macosx/plugins/DFCdrom: Added Mac OS X port of DFCdrom.
 * macosx/plugins/CDDeviceInterface: Removed old CDDeviceInterface plugin.
 * macosx/Pcsx.xcodeproj/project.pbxproj: Added DFCdrom into project.
 * plugins/dfinput/pad.c: Minor change for Mac OS X.
 * plugins/dfinput/pad.h: Likewise.
 * macosx/plugins/DFInput: Added Mac OS X port of DFInput (prelimiary, no
   config dialog yet).

July 18, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfxvideo/gpucfg-0.1df/dfxvideo.glade2: Tweaked the config dialog
   to make it less confusing.
 * plugins/dfxvideo/gpucfg-0.1df/main.c: Likewise.

July 17, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfcdrom/cdr-libcdio.c: Include libcdio headers before cdr.h.
 * macosx/plugins/CDDeviceInterface/src/PlugCD.c: Check for kIODVDMediaClass
   as well (MIGHT fix the "Can't check CD-ROM" issue, cannot test).

July 15, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfcdrom/cdr-libcdio.c: Force CAM access mode on FreeBSD.
 * plugins/dfcdrom/cdrcfg-0.1df/main.c: Use /dev/cd? instead on /dev/acd? on
   FreeBSD.
 * plugins/dfcdrom/cdr.h: Likewise.
 * plugins/dfxvideo/cfg.c: Don't use 2xSai when no config file exists.
 * autogen.sh: Use autoreconf.

July 14, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfcdrom/cdr.h: Silenced warning on macro redefination when using
   libcdio with some special configuration.